# battlesnake

./: .gitignore  Cargo.toml  Dockerfile  README.md  bench.sh  requests.http  run_benchmark_snakes.sh  run_local.sh  run_servers.sh
.github/workflows/: run_benchmarks.yaml
dev/bench/: data.js
requests/: example_game_start.json  example_move_request.json  example_move_request_2.json  example_move_request_3.json  example_move_request_all_blocked.json  failure_1.json  failure_10.json  failure_11.json  failure_12.json  failure_13.json  failure_14.json  failure_15.json  failure_16.json  failure_17.json  failure_18.json  failure_19.json  failure_2.json  failure_20_for_improved_area_evaluation.json  failure_21_bait_into_trap_with_top_wall.json  failure_22_bait_into_trap_with_top_wall_modified.json  failure_23_go_for_kill_here.json  failure_24_debug_space.json  failure_25_continue_down_for_kill.json  failure_26_continue_down_for_kill.json  failure_27_grab_food.json  failure_28_grab_food.json  failure_29_move_down_towards_food.json  failure_3.json  failure_30_grab_food_leads_to_death.json  failure_31_going_right_leads_to_death.json  failure_32_right_certain_death_down_maybe_death.json  failure_33_do_not_move_left_as_you_can_get_killed.json  failure_34_follow_own_tail.json  failure_35_up_2.json  failure_36_tail_2_food_4.json  failure_37_unclear_best_move.json  failure_38_left_possible_wall_squeeze.json  failure_39_grab_food_in_middle.json  failure_4.json  failure_40_should_go_up_to_food.json  (+26 more)
src/: lib.rs  logic.rs  main.rs
src/game/: board.rs  coord.rs  direction.rs  field.rs  game_state.rs  moves.rs  snake.rs  snakes.rs
src/logic/: efficient_game_objects.rs  hungry_simple_snake.rs  mod.rs  simple_tree_search_snake.rs  smart_snake.rs
src/logic/breadth_first/: e_board_extension.rs  e_game_state_extension.rs  e_score_board.rs  e_state_node.rs  e_state_tree.rs  mod.rs
src/logic/depth_first/: d_board.rs  d_coord.rs  d_direction.rs  d_field.rs  d_game_state.rs  d_moves_set.rs  (+12 more)
tests/: situations.rs
(+108 files in other folders)
