[package]
name = "battlesnake_game_of_chicken"
version = "1.0.0"
edition = "2024"
homepage = "https://play.battlesnake.com"
readme = "README.md"
keywords = ["battlesnake"]
description = """
A simple Battlesnake written in Rust
"""

[lib]
name = "battlesnake_game_of_chicken_lib"
path = "src/lib.rs"

[[bin]]
name = "analyze_local_simulation"
path = "src/bin/analyze_local_simulation.rs"

[[bin]]
name = "run_local_simulation"
path = "src/bin/run_local_simulation.rs"

[[bin]]
name = "run_generated_tests"
path = "src/bin/run_generated_tests.rs"

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
log = "0.4.0"
env_logger = "0.9.0"
rand = "0.8.4"
arrayvec = "0.7.6"
itertools = "0.13.0"
rustc-hash = "2.1.1"
tabled = "0.20.0"
